# slack-creation-bot

./: .gitignore  config.json  deploy.sh  pyproject.toml  requirements.txt  secrets.sh  slack_manifest.json
src/: main.py  requirements.txt  slack_link_utils.py  url_utils.py
src/common/: scraping_utils.py  slack_link_utils.py
tests/: test_main.py  test_scraping_utils.py  test_slack_link_utils.md  test_slack_link_utils.py  test_url_utils.py
